# Agnostic-AI-Agent-Loop

./: .env.example  .gitignore  AGENTS.md  README.md  _extract_tail.py  agent.py  ai_provider.py  benchmark_results.md  cli.py  context_builder.py  memory.py  pyproject.toml  tools.py
.agents/hooks/: README.md
.agents/hooks/on_session_complete/: performance_tracker.py
.agents/mcp/: chrome-devtools.json
.agents/memory/: memory_graph.jsonl
.agents/rules/: KNOWLEDGE.md  RESEARCH_FIRST.md  TOKEN_OPTIMIZATION.md
.specs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  STACK.md  TECHNICAL-MAP.md
.specs/project/: CONTEXT.md  STATE.md
agent/: __init__.py  core.py  listener.py  prompts.py
context/: __init__.py  breakdown.py  builder.py  mcp.py  references.py
front/: index.html  server.py
hooks/: __init__.py  manager.py
memory/: __init__.py  core.py  schema.py
providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
scripts/: benchmark_modes.py
tests/: test_advanced_hooks.py  test_agent.py  test_agent_orchestrator.py  test_async_delegation.py  test_benchmark_real_calls.py  test_cli_loop.py  test_concurrent_tool_execution.py  test_context_breakdown.py  test_context_builder.py  test_context_references.py  test_cost_control.py  test_curl_tool.py  test_hooks.py  test_io_tools.py  test_math_tools.py  test_mcp_client.py  test_memory.py  test_memory_graph.py  test_new_tools.py  test_providers.py
tools/: __init__.py  io_tools.py  math_tools.py  multi_agent.py  web_tools.py
tui/: __init__.py  commands.py  helpers.py  listener.py  runner.py
(+112 files in other folders)
