[project]
name = "agnostic-agent"
version = "0.2.1"
description = "A provider-agnostic autonomous AI agent loop with parallel multi-agent orchestration and rich terminal interface"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "fastmcp>=3.4.4",
    "google-genai>=2.10.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
agnostic-agent = "cli:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["providers", "tools"]
include = [
    "/*.py",
    "/.agents",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
